--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -13,3 +13,13 @@
 	-pie-background: rgba(127, 127, 127, 0.5);
 }
 
+#u1414-4
+{
+	background-color: transparent;
+	line-height: 14px;
+	font-size: 12px;
+	font-family: double-pica-small-caps, serif;
+	font-weight: 400;
+	position: relative;
+}
+
