--- a/css/the-corrupt.css
+++ b/css/the-corrupt.css
@@ -1,28 +1,373 @@
 .version.the_corrupt /* version checker */
 {
-	color: #0000F5;
-	background-color: #D9D6B8;
+	color: #00000F;
+	background-color: #3E6F09;
 }
 
 .html
 {
-	background-color: #FFFFFF;
+	background-color: #000000;
 }
 
 #page
 {
 	z-index: 1;
-	width: 0px;
-	min-height: 0px;
+	width: 1022px;
+	min-height: 961px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
-	padding-top: 62px;
-	padding-right: 1060px;
-	padding-bottom: 438px;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 20px 19px 19px;
+}
+
+#u1400
+{
+	z-index: 37;
+	width: 390px;
+	background-color: transparent;
+	margin-left: 316px;
+	position: relative;
+}
+
+#pu1166
+{
+	width: 0.01px;
+	margin-left: 1px;
+	margin-top: 1px;
+}
+
+#u1166
+{
+	z-index: 7;
+	width: 110px;
+	margin-right: -10000px;
+}
+
+#u1159-4
+{
+	z-index: 9;
+	width: 62px;
+	min-height: 16px;
+	margin-right: -10000px;
+	margin-top: 7px;
+	left: 33px;
+}
+
+#u1160
+{
+	z-index: 13;
+	width: 110px;
+	height: 50px;
+	margin-right: -10000px;
+}
+
+.ie #u1160
+{
+	background-color: #FFFFFF;
+	opacity: 0.01;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+	filter: alpha(opacity=1);
+}
+
+#u1178
+{
+	z-index: 39;
+	width: 40px;
+	margin-right: -10000px;
+	margin-top: 5px;
+	left: 815px;
+}
+
+#u1180
+{
+	z-index: 41;
+	width: 40px;
+	margin-right: -10000px;
+	margin-top: 5px;
+	left: 881px;
+}
+
+#u1182
+{
+	z-index: 43;
+	width: 39px;
+	margin-right: -10000px;
+	margin-top: 6px;
+	left: 947px;
+}
+
+#pu1219
+{
+	width: 0.01px;
+	margin-left: 1px;
+	margin-top: 5px;
+}
+
+#u1219
+{
+	z-index: 14;
+	width: 490px;
+	-pie-box-shadow: none;
+	-moz-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 12px;
+	left: 520px;
+}
+
+._u1219.f3s_top
+{
+	background-image: url("../images/u1165-sprite.png");
+	width: 490px;
+	overflow: hidden;
+	height: 7px;
+	background-position: left top;
+}
+
+._u1219.f3s_mid
+{
+	background-image: url("../images/u1165-sprite.png");
+	overflow: visible;
+	background-position: -490px top;
+	width: 490px;
+	height: 535px;
+}
+
+._u1219.f3s_bot
+{
+	background-image: url("../images/u1165-sprite.png");
+	width: 490px;
+	overflow: visible;
+	height: 7px;
+	background-position: -980px top;
+}
+
+#u1220
+{
+	z-index: 15;
+	width: 1019px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #000000;
+	background-color: #BFBFBF;
+	background-color: rgba(127, 127, 127, 0.5);
+	padding-bottom: 17px;
+	margin-bottom: -1px;
+	position: relative;
+	margin-right: -10000px;
+	-pie-background: rgba(127, 127, 127, 0.5);
+}
+
+#u1292-4
+{
+	z-index: 33;
+	width: 490px;
+	min-height: 493px;
+	background-color: transparent;
+	line-height: 26px;
+	font-size: 22px;
+	color: #FFFFFF;
+	font-family: double-pica-small-caps, serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 11px;
+	left: 519px;
+}
+
+#u1292-2
+{
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+#slideshowu1222
+{
+	z-index: 16;
+	width: 0.01px;
+	height: 532px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 12px;
+	left: 10px;
+}
+
+#u1234
+{
+	position: absolute;
+	width: 490px;
+	height: 451px;
+	background-color: transparent;
+}
+
+#u1234popup
+{
+	z-index: 17;
+}
+
+#u1267
+{
+	z-index: 18;
+	display: block;
+	vertical-align: top;
+	margin-bottom: -9px;
+	margin-right: -10000px;
+	position: relative;
+}
+
+#u1239
+{
+	z-index: 20;
+	width: 282px;
+	height: 451px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	padding-left: 98px;
+	padding-right: 110px;
+	padding-bottom: 1px;
+	margin-right: -10000px;
+	position: relative;
+}
+
+#u1282
+{
+	z-index: 22;
+	width: 282px;
+	height: 451px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	padding-left: 100px;
+	padding-right: 108px;
+	margin-right: -10000px;
+	position: relative;
+}
+
+#u1239 img.shadow,#u1282 img.shadow
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+}
+
+#u1241
+{
+	position: absolute;
+	width: 400px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	padding-bottom: 4px;
+	top: 479px;
+	left: 49px;
+}
+
+#u1241popup
+{
+	z-index: 24;
+}
+
+#u1270
+{
+	z-index: 25;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 100px;
+}
+
+#u1270_img
+{
+	padding-left: 8px;
+	padding-right: 7px;
+}
+
+#u1246
+{
+	z-index: 27;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 170px;
+}
+
+#u1285
+{
+	z-index: 29;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 240px;
+}
+
+#u1270.SSSlideLinkSelected,#u1246.SSSlideLinkSelected,#u1285.SSSlideLinkSelected
+{
+	border-style: none;
+	border-color: transparent;
+	margin: 4px -10000px 0px 0px;
+}
+
+#u1246_img,#u1285_img
+{
+	padding-left: 16px;
+	padding-right: 16px;
+}
+
+.SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* slideshowFreeStyle */
+{
+	cursor: pointer;
+}
+
+.SSSlideLoading /* slideshowFreeStyle */
+{
+	background: url("../images/loading.gif") no-repeat center center;
+}
+
+#u1248
+{
+	z-index: 31;
+	width: 207px;
+	background-color: transparent;
+	margin-left: 407px;
+	margin-top: 5px;
+	position: relative;
+}
+
+#u488
+{
+	z-index: 2;
+	width: 1020px;
+	padding-bottom: 33px;
+	margin-top: 4px;
+}
+
+#u1414-4
+{
+	z-index: 3;
+	width: 190px;
+	min-height: 13px;
+	margin-right: -10000px;
+	margin-top: 33px;
+	left: 415px;
 }
 
 body
