--- a/css/the-shade.css
+++ b/css/the-shade.css
@@ -1,75 +1,377 @@
 .version.the_shade /* version checker */
 {
-	color: #0000F5;
-	background-color: #201FD6;
+	color: #0000E9;
+	background-color: #E788C6;
 }
 
 .html
 {
-	background-color: #FFFFFF;
+	background-color: #000000;
 }
 
 #page
 {
 	z-index: 1;
-	width: 1021px;
-	min-height: 373px;
+	width: 1022px;
+	min-height: 961px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
+	-moz-border-radius: 0px 0px 0px 10px ;
+	-webkit-border-radius: 0px 0px 0px 10px ;
+	-khtml-border-radius: 0px 0px 0px 10px ;
+	border-radius: 0px 0px 0px 10px ;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 65px 19px 62px 20px;
+	padding: 20px 19px 19px;
+}
+
+#u1051
+{
+	z-index: 37;
+	width: 380px;
+	background-color: transparent;
+	margin-left: 321px;
+	position: relative;
+}
+
+#pu1166
+{
+	width: 0.01px;
+	margin-left: 1px;
+}
+
+#u1166
+{
+	z-index: 7;
+	width: 110px;
+	margin-right: -10000px;
+}
+
+#u1159-4
+{
+	z-index: 9;
+	width: 62px;
+	min-height: 16px;
+	margin-right: -10000px;
+	margin-top: 7px;
+	left: 33px;
+}
+
+#u1160
+{
+	z-index: 13;
+	width: 110px;
+	height: 50px;
+	margin-right: -10000px;
+}
+
+.ie #u1160
+{
+	background-color: #FFFFFF;
+	opacity: 0.01;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+	filter: alpha(opacity=1);
+}
+
+#u1178
+{
+	z-index: 39;
+	width: 40px;
+	margin-right: -10000px;
+	margin-top: 5px;
+	left: 815px;
+}
+
+#u1180
+{
+	z-index: 41;
+	width: 40px;
+	margin-right: -10000px;
+	margin-top: 5px;
+	left: 881px;
+}
+
+#u1182
+{
+	z-index: 43;
+	width: 39px;
+	margin-right: -10000px;
+	margin-top: 6px;
+	left: 947px;
+}
+
+#pu1165
+{
+	width: 0.01px;
+	margin-left: 1px;
+	margin-top: 5px;
+}
+
+#u1165
+{
+	z-index: 14;
+	width: 490px;
+	-pie-box-shadow: none;
+	-moz-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 11px;
+	left: 520px;
+}
+
+._u1165.f3s_top
+{
+	background-image: url("../images/u1165-sprite.png");
+	width: 490px;
+	overflow: hidden;
+	height: 7px;
+	background-position: left top;
+}
+
+._u1165.f3s_mid
+{
+	background-image: url("../images/u1165-sprite.png");
+	overflow: visible;
+	background-position: -490px top;
+	width: 490px;
+	height: 428px;
+}
+
+._u1165.f3s_bot
+{
+	background-image: url("../images/u1165-sprite.png");
+	width: 490px;
+	overflow: visible;
+	height: 7px;
+	background-position: -980px top;
 }
 
 #u494
 {
-	z-index: 2;
-	width: 829px;
+	z-index: 15;
+	width: 1019px;
 	border-width: 1px;
 	border-style: solid;
 	border-color: #000000;
 	background-color: #BFBFBF;
 	background-color: rgba(127, 127, 127, 0.5);
+	padding-bottom: 122px;
+	margin-bottom: -1px;
 	position: relative;
-	padding: 5px 41px 69.30000000000018px 149px;
+	margin-right: -10000px;
 	-pie-background: rgba(127, 127, 127, 0.5);
-}
-
-#u506
-{
-	z-index: 7;
-	width: 720px;
-	-pie-box-shadow: none;
-	-moz-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
-	-webkit-box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
-	box-shadow: 0px 0px 10px 3px rgba(255, 255, 255, 0.5);
-	background-color: transparent;
-	position: relative;
 }
 
 #u495-4
 {
-	z-index: 3;
-	width: 520px;
-	min-height: 474px;
-	background-color: #FFFFFF;
-	background-color: rgba(255, 255, 255, 0.5);
-	font-size: 24px;
-	line-height: 29px;
-	color: #000000;
-	font-family: Times, Times New Roman, Georgia, serif;
-	margin-left: 309px;
-	margin-top: 27px;
+	z-index: 16;
+	width: 490px;
+	min-height: 442px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	line-height: 26px;
+	font-size: 22px;
+	color: #FFFFFF;
+	font-family: double-pica-small-caps, serif;
+	font-weight: 400;
 	position: relative;
-	-pie-background: rgba(255, 255, 255, 0.5);
+	margin-right: -10000px;
+	margin-top: 10px;
+	left: 519px;
 }
 
 #u495-2
 {
 	padding-right: 10px;
 	padding-left: 10px;
+}
+
+#slideshowu1057
+{
+	z-index: 20;
+	width: 0.01px;
+	height: 532px;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 11px;
+	left: 10px;
+}
+
+#u1066
+{
+	position: absolute;
+	width: 490px;
+	height: 451px;
+	background-color: transparent;
+}
+
+#u1066popup
+{
+	z-index: 21;
+}
+
+#u1108
+{
+	z-index: 22;
+	display: block;
+	vertical-align: top;
+	margin-bottom: -9px;
+	margin-right: -10000px;
+	position: relative;
+}
+
+#u1071
+{
+	z-index: 24;
+	width: 280px;
+	height: 451px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	padding-left: 100px;
+	padding-top: 2px;
+	padding-right: 110px;
+	margin-right: -10000px;
+	position: relative;
+}
+
+#u1123
+{
+	z-index: 26;
+	width: 480px;
+	height: 451px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	margin-right: -10000px;
+	position: relative;
+	padding: 44px 5px 43px;
+}
+
+#u1071 img.shadow,#u1123 img.shadow
+{
+	-pie-box-shadow: 6px 6px 8px #7F7F7F;
+	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+}
+
+#u1059
+{
+	position: absolute;
+	width: 400px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	padding-bottom: 4px;
+	top: 479px;
+	left: 49px;
+}
+
+#u1059popup
+{
+	z-index: 28;
+}
+
+#u1111
+{
+	z-index: 29;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 100px;
+}
+
+#u1111_img
+{
+	padding-left: 8px;
+	padding-right: 7px;
+}
+
+#u1062
+{
+	z-index: 31;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 170px;
+}
+
+#u1062_img
+{
+	padding-left: 16px;
+	padding-right: 16px;
+}
+
+#u1126
+{
+	z-index: 33;
+	width: 60px;
+	height: 45px;
+	border-color: #6B6B6B;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 4px;
+	left: 240px;
+}
+
+#u1111.SSSlideLinkSelected,#u1062.SSSlideLinkSelected,#u1126.SSSlideLinkSelected
+{
+	border-style: none;
+	border-color: transparent;
+	margin: 4px -10000px 0px 0px;
+}
+
+.SSFirstButton,.SSPreviousButton,.SSNextButton,.SSLastButton,.SSSlideLink,.SSCloseButton /* slideshowFreeStyle */
+{
+	cursor: pointer;
+}
+
+.SSSlideLoading /* slideshowFreeStyle */
+{
+	background: url("../images/loading.gif") no-repeat center center;
+}
+
+#u1187
+{
+	z-index: 35;
+	width: 207px;
+	background-color: transparent;
+	margin-left: 407px;
+	margin-top: 4px;
+	position: relative;
+}
+
+#u488
+{
+	z-index: 2;
+	width: 1020px;
+	padding-bottom: 33px;
+	margin-top: 5px;
+}
+
+#u1414-4
+{
+	z-index: 3;
+	width: 190px;
+	min-height: 13px;
+	margin-right: -10000px;
+	margin-top: 33px;
+	left: 415px;
 }
 
 body
