--- a/css/the-corrupt.css
+++ b/css/the-corrupt.css
@@ -1,7 +1,7 @@
 .version.the_corrupt /* version checker */
 {
-	color: #0000FD;
-	background-color: #D3083F;
+	color: #00001B;
+	background-color: #4B7ED9;
 }
 
 .html
@@ -13,14 +13,14 @@
 {
 	z-index: 1;
 	width: 1022px;
-	min-height: 961px;
+	min-height: 962px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 20px 19px 19px;
+	padding: 20px 19px 18px;
 }
 
 #u1400
@@ -41,7 +41,7 @@
 
 #u1159-4
 {
-	z-index: 7;
+	z-index: 2;
 	width: 62px;
 	min-height: 16px;
 	margin-right: -10000px;
@@ -51,7 +51,7 @@
 
 #u1415
 {
-	z-index: 12;
+	z-index: 7;
 	height: 68px;
 	width: 128px;
 	margin-bottom: -9px;
@@ -62,29 +62,38 @@
 
 #u1178
 {
-	z-index: 39;
-	width: 40px;
+	z-index: 40;
+	height: 58px;
+	width: 58px;
+	margin-bottom: -4px;
 	margin-right: -10000px;
-	margin-top: 5px;
-	left: 815px;
+	margin-top: -4px;
+	left: 806px;
 }
 
 #u1180
 {
-	z-index: 41;
-	width: 40px;
+	z-index: 43;
+	height: 58px;
+	width: 58px;
+	margin-bottom: -4px;
 	margin-right: -10000px;
-	margin-top: 5px;
-	left: 881px;
+	margin-top: -4px;
+	left: 872px;
 }
 
 #u1182
 {
-	z-index: 43;
+	z-index: 45;
 	width: 39px;
 	margin-right: -10000px;
 	margin-top: 6px;
 	left: 947px;
+}
+
+#u1182:active
+{
+	margin: 6px -10000px 0px 0px;
 }
 
 #pu1219
@@ -340,17 +349,17 @@
 	position: relative;
 }
 
-#u488
+#u1458
 {
-	z-index: 2;
+	z-index: 9;
 	width: 1020px;
 	padding-bottom: 33px;
-	margin-top: 4px;
+	margin-top: 5px;
 }
 
-#u1414-4
+#u1459-4
 {
-	z-index: 3;
+	z-index: 10;
 	width: 190px;
 	min-height: 13px;
 	margin-right: -10000px;
