--- a/css/the-forgotten.css
+++ b/css/the-forgotten.css
@@ -1,7 +1,7 @@
 .version.the_forgotten /* version checker */
 {
-	color: #00000E;
-	background-color: #7260F5;
+	color: #0000FE;
+	background-color: #CD5DE2;
 }
 
 .html
@@ -13,14 +13,14 @@
 {
 	z-index: 1;
 	width: 1022px;
-	min-height: 959px;
+	min-height: 960px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
 	background-color: transparent;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 22px 19px 19px;
+	padding: 22px 19px 18px;
 }
 
 #u1406
@@ -40,7 +40,7 @@
 
 #u1159-4
 {
-	z-index: 7;
+	z-index: 2;
 	width: 62px;
 	min-height: 16px;
 	margin-right: -10000px;
@@ -50,7 +50,7 @@
 
 #u1415
 {
-	z-index: 12;
+	z-index: 7;
 	height: 68px;
 	width: 128px;
 	margin-bottom: -9px;
@@ -61,29 +61,38 @@
 
 #u1178
 {
-	z-index: 39;
-	width: 40px;
+	z-index: 40;
+	height: 58px;
+	width: 58px;
+	margin-bottom: -4px;
 	margin-right: -10000px;
-	margin-top: 5px;
-	left: 815px;
+	margin-top: -4px;
+	left: 806px;
 }
 
 #u1180
 {
-	z-index: 41;
-	width: 40px;
+	z-index: 43;
+	height: 58px;
+	width: 58px;
+	margin-bottom: -4px;
 	margin-right: -10000px;
-	margin-top: 5px;
-	left: 881px;
+	margin-top: -4px;
+	left: 872px;
 }
 
 #u1182
 {
-	z-index: 43;
+	z-index: 45;
 	width: 39px;
 	margin-right: -10000px;
 	margin-top: 6px;
 	left: 947px;
+}
+
+#u1182:active
+{
+	margin: 6px -10000px 0px 0px;
 }
 
 #pu1298
@@ -344,17 +353,17 @@
 	position: relative;
 }
 
-#u488
+#u1458
 {
-	z-index: 2;
+	z-index: 9;
 	width: 1020px;
 	padding-bottom: 33px;
-	margin-top: 4px;
+	margin-top: 5px;
 }
 
-#u1414-4
+#u1459-4
 {
-	z-index: 3;
+	z-index: 10;
 	width: 190px;
 	min-height: 13px;
 	margin-right: -10000px;
