--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,17 @@
+#u895:active
+{
+	background: url("../images/u895-m.png") no-repeat 0px 0px;
+}
+
+#u897:active
+{
+	background: url("../images/u897-m.png") no-repeat 0px 0px;
+}
+
 .version.index /* version checker */
 {
-	color: #000000;
-	background-color: #E186FE;
+	color: #0000F3;
+	background-color: #10648A;
 }
 
 .html
@@ -35,7 +45,7 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	padding-bottom: 50px;
+	padding-bottom: 5px;
 	position: fixed;
 	top: 20px;
 	left: 50%;
@@ -58,7 +68,7 @@
 
 #u1208
 {
-	z-index: 115;
+	z-index: 117;
 	width: 220px;
 	background-color: transparent;
 	position: fixed;
@@ -113,8 +123,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	color: #FFFFFF;
 	line-height: 22px;
+	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -166,8 +176,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	color: #FFFFFF;
 	line-height: 22px;
+	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -217,8 +227,8 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	color: #FFFFFF;
 	line-height: 22px;
+	color: #FFFFFF;
 	font-size: 18px;
 	text-align: center;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
@@ -253,37 +263,59 @@
 	cursor: pointer;
 }
 
-#u897
-{
-	z-index: 109;
-	width: 40px;
-	background-color: transparent;
-	position: fixed;
-	top: 25px;
-	left: 50%;
-	margin-left: 305px;
-}
-
-#u895
-{
-	z-index: 111;
-	width: 40px;
-	background-color: transparent;
-	position: fixed;
-	top: 25px;
-	left: 50%;
-	margin-left: 371px;
-}
-
 #u899
 {
-	z-index: 113;
+	z-index: 115;
 	width: 39px;
 	background-color: transparent;
 	position: fixed;
 	top: 25px;
 	left: 50%;
 	margin-left: 437px;
+}
+
+#u899:active
+{
+	-pie-box-shadow: none;
+	-moz-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	-webkit-box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.5);
+	margin: 0px 0px 0px 437px;
+}
+
+#ppu897
+{
+	width: 0.01px;
+	padding-bottom: 40px;
+	margin-right: -10000px;
+	margin-top: 5px;
+	margin-left: 815px;
+}
+
+#u897
+{
+	z-index: 110;
+	height: 58px;
+	width: 58px;
+	vertical-align: top;
+	position: fixed;
+	top: 16px;
+	left: 50%;
+	margin-left: 296px;
+	background: url("../images/u897.png") no-repeat 9px 9px;
+}
+
+#u895
+{
+	z-index: 113;
+	height: 58px;
+	width: 58px;
+	vertical-align: top;
+	position: fixed;
+	top: 16px;
+	left: 50%;
+	margin-left: 362px;
+	background: url("../images/u895.png") no-repeat 9px 9px;
 }
 
 #pmatthew
@@ -302,7 +334,7 @@
 
 #u977
 {
-	z-index: 117;
+	z-index: 119;
 	width: 1020px;
 	height: 140px;
 	border-style: none;
